[package]
name = "modular-osv"
version = "0.1.5"
edition = "2021"

[dependencies]
actix-web = "4.10.2"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
tera = { version = "1.20.0", default-features = false }
tokio = { version = "1.43.0", features = ["full"] }
reqwest = { version = "0.12", features = ["native-tls-alpn","cookies","gzip","brotli","deflate"]}
regex = "1.11.1"
lazy_static = "1.5.0"

[profile.release]
lto = "fat"
debug = 0
codegen-units = 1
opt-level = "z"

[build-dependencies]
uuid = { version = "1.13.2", features = ["v4"]}
